added input code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     </div>
     <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
 
+    <input type="text" id="code">
+    <button onclick="runCode()">Run</button>
     <div class="game-container">
       <div class="game-message">
         <p></p>
